Deleted unneeded function